log/build_2026-05-26_14-25-01/sudsakhon_mainprogram/stderr.log
  File "/home/ubuntu/ros2_ws/install/sudsakhon_mainprogram/lib/python3.12/site-packages/sudsakhon_mainprogram/main_controller.py", line 314
    self.Griper_L('active')ิ
                           ^
SyntaxError: invalid character 'ิ' (U+0E34)

